--- a/package.xml
+++ b/package.xml
@@ -9,7 +9,7 @@
   <license>Apache-2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <depend>marine_acoustic_msgs</depend>
+  <depend>sensor_msgs</depend>
   <depend>rospy</depend>
 
   <export>
